--- a/.env
+++ b/.env
@@ -27,3 +27,9 @@ APP_SECRET=cb130800e008dab33d0c6e2a6fe9ff80
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+# CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+EXPORT_DIR="/var/export/"
